<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name" translatable="false">&appname;</string>
    <string name="map_key" translatable="false">&p1;&p2;&p3;</string>
    <string name="logintext">Log In</string>
    <string name="login_txt">Log in</string>
    <string name="signup">Sign up</string>
    <string name="welcome_to_appname">Welcome to &appname;</string>
    <string name="fb_button">Continue with Facebook</string>
    <string name="google_button">Continue with Google</string>
    <string name="please_login_to_verify_your_email">Please Login to verify your Email.</string>
    <string name="iban_number">IBAN Number</string>
    <string name="your_email">And, your email?</string>
    <string name="email_address">EMAIL</string>
    <string name="email_promotional">I\'d like to receive promotional communications, including discounts, surveys, inspiration, and love from &appname;
        via email, SMS, and phone</string>
    <string name="create_password">Create a password</string>
    <string name="password_condition_text">Your password must be 8 or more characters long. Do not use any common passwords, repetition or sequences. Try making it longer or adding symbols, like /!,/#,or /%</string>
    <string name="password">Password</string>
    <string name="show">Show</string>
    <string name="hide">Hide</string>
    <string name="when_birthday">When is your birthday?</string>
    <string name="age_limit">You must be at least 18 years old to use &appname;. Others won\'t see your birthday.</string>
    <string name="birthday">Birthday</string>
    <string name="create_your_account">Create your account</string>
    <string name="forgotpassword">Reset password</string>
    <string name="forgot_your_password">Reset password</string>
    <string name="enter_email">Enter the email address associated with your account, and we’ll email you a link to reset your password.</string>
    <string name="link_msg">A link to reset your password has been sent to %s</string>
    <string name="change_your_password">Reset your password</string>
    <string name="success_reset_msg">Password reset successfully. Please Login to continue</string>
    <string name="menu_1">Explore</string>
    <string name="saved">Wishlists</string>
    <string name="menu_2">Trips</string>
    <string name="menu_3">Inbox</string>
    <string name="menu_4">Profile</string>
    <string name="menu_5">Listings</string>
    <string name="menu_6">Calendar</string>
    <string name="menu_7">Progress</string>
    <string name="search_box">Where do you go?</string>
    <string name="dates">Dates</string>
    <string name="filter">Filter</string>
    <string name="filter_small"> filter</string>
    <string name="filters_small"> filters</string>
    <string name="listings_you_can_book_without_waiting_for_host_approval" tools:ignore="ExtraTranslation">You can book without waiting for host approval.</string>
    <string name="instant_book">Instant book</string>
    <string name="no_result">No Results</string>
    <string name="no_results_found">No results found</string>
    <string name="no_list_found">No listing found</string>
    <string name="try_adjusting_your_search_here_are_some_ideas"> Try adjusting your search. Here are some ideas. Change your filters or dates. Search for a specific city, address.</string>
    <string name="change_your_filters_or_dates"> Change your filters or dates.</string>
    <string name="entire_house">Entire House</string>
    <string name="price_per_night">20 / night</string>
    <string name="list_name">Contemporary Chalet - Lake Annecy</string>
    <string name="search_for_a_specific_city_address"> Search for a specific city, address.</string>
    <string name="most_viewed">Most viewed</string>
    <string name="recommed_viewed">Recommended</string>
    <string name="guest">Guest</string>
    <string name="guests">Guests</string>
    <string name="infants">infants</string>
    <string name="pets">Pets</string>
    <string name="guest_small"> guest</string>
    <string name="guests_small"> guests</string>
    <string name="see_results">See results</string>
    <string name="reset">Reset</string>
    <string name="clear">Clear</string>
    <string name="price_range">Price range</string>
    <string name="facilities">Facilities</string>
    <string name="amenities">Amenities</string>
    <string name="show_all_amenities">Show all amenities</string>
    <string name="show_all_bedTypes">Show all bed types</string>
    <string name="home_type">Home type</string>
    <string name="Rooms_and_beds">Rooms and Beds</string>
    <string name="house_rules">House rules</string>
    <string name="divider"> / </string>
    <string name="phone">Phone number</string>
    <string name="location_edit">Location</string>
    <string name="edit_about_me">Edit about me</string>
    <string name="email">Email</string>
    <string name="languages">Languages</string>
    <string name="preferred_language">Preferred language</string>
    <string name="email_info_edit">This is used for login and emails from &appname; and it not shared with other users.</string>
    <string name="gender">Gender</string>
    <string name="birth_date">Birth date</string>
    <string name="Error_msg">Sorry, we had trouble updating your %s at this time</string>
    <string name="logout">Log out</string>
    <string name="grant_camera_permission">Grant Permission to access your gallery and photos</string>
    <string name="why_host">Why host?</string>
    <string name="about_us">About us</string>
    <string name="list_your_space">List Your Space</string>
    <string name="text_one">Become a host by list your space and earn more money</string>
    <string name="text_two">Choose your own price, availability, rules and much more</string>
    <string name="text_three">Manage your upcoming reservations easily</string>
    <string name="text_four">Monitor your payouts for each reservations in single screen</string>
    <string name="email_confirmed">Email confirmed</string>
    <string name="document_verification">Document Verification</string>
    <string name="google_connected">Google connected</string>
    <string name="facebook_connected">Facebook connected</string>
    <string name="phone_verified">Phone Verified</string>
    <string name="verified">Verified</string>
    <string name="verify_phone">Verify phone number</string>
    <string name="about">About</string>
    <string name="confirm_email">Confirm Email</string>
    <string name="connect_google">Connect Google</string>
    <string name="connect_fb">Connect Facebook</string>
    <string name="first_name_edit">First name</string>
    <string name="last_name_edit">Last name</string>
    <string name="edit_profile">Edit personal info</string>
    <string name="done">Done</string>
    <string name="company">Company</string>
    <string name="individual">Individual</string>
    <string name="company_name">Company name</string>
    <string name="account_type">Account type</string>
    <string name="account_type_error">Please choose account type</string>
    <string name="authtoken_desc">Your session has been expired and you are logged out from your account. Please log in again.</string>
    <string name="login">Log in</string>
    <string name="invalid_email">Invalid Email:</string>
    <string name="invalid_email_desc">Please check if your email has been entered correctly.</string>
    <string name="invalid_login_credentials">Invalid login credentials</string>
    <string name="show_password">Show Password</string>
    <string name="error">Error:</string>
    <string name="currently_offline">You are currently offline</string>
    <string name="birthday_error">Birthday Error.</string>
    <string name="server_error">Server not respond please try again later!!</string>
    <string name="to_sign_up">To sign up, you must be 18 or older.</string>
    <string name="age_18_limit">You must be 18 or older.</string>
    <string name="email_already_exists">Email already exists</string>
    <string name="password_error">Password Error:</string>
    <string name="password_limit">Password limit must be more than 7 characters long</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="reset_password_error">Reset Password Error:</string>
    <string name="reset_password_error_desc">Your request to reset password already expired.</string>
    <string name="something_went_wrong_action">Something went wrong with your request.</string>
    <string name="invalid_name">Invalid Name:</string>
    <string name="invalid_name_desc">Both Firstname and Lastname should not be empty</string>
    <string name="invalid_firstname_desc">First name should not be empty</string>
    <string name="invalid_lastname_desc">Last name should not be empty</string>
    <string name="invalid_phone">Invalid Phone Number.</string>
    <string name="invalid_phone_desc">Phone Number should have more than 6 characters</string>
    <string name="email_not_exist">Email not exist in your FB account, please use another one to sign in.</string>
    <string name="facebook_app_id" translatable="false">FB_ID</string>
    <string name="fb_login_protocol_scheme" translatable="false">fbFB_ID</string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string name="radio_other">Other</string>
    <string name="cancel" tools:ignore="ButtonCase">Cancel</string>
    <string name="apply">APPLY</string>
    <string name="check_in">Check-in</string>
    <string name="check_out">Checkout</string>
    <string name="anytime">Anytime</string>
    <string name="cancellation_policy_points"> Cleaning fees are always refunded if the guest did not check in.

    </string>
    <string name="cancellation_policy_points1"> The &appname; service fee is refundable if the guest cancels before the trip starts. If a guest books a reservation that overlaps with any part of an existing reservation, we won’t refund the &appname;
        service fee if they decide to cancel.</string>
    <string name="cancellation_policy_points2"> Accommodation fees (the total nightly rate you\'re charged) are refundable in certain circumstances as outlined below.</string>
    <string name="cancellation_policy_points3"> If there is a complaint from either party, notice must be given to &appname;
        within 24 hours of check-in.</string>
    <string name="message">Message</string>
    <string name="itinerary">View itinerary</string>
    <string name="approve">Approve</string>
    <string name="decline">Decline</string>
    <string name="receipt">View receipt</string>
    <string name="cancel_">Cancel</string>
    <string name="uh_oh">Uh-oh!</string>
    <string name="we_can_t_seem_to_find_the_anything_that_you_re_looking_for">We can`t seem to find the anything that you`re looking for!</string>
    <string name="error_code_404">Error code: 404</string>
    <string name="explore_appname">Explore &appname;</string>
    <string name="become_host">Become a Host</string>
    <string name="delete_account">Delete account</string>
    <string name="delete_account_caution"><b>Caution: </b></string>
    <string name="delete_account_first"> All of your data and reservations\ / bookings</string>
    <string name="delete_account_dsec"> will be lost if you delete your &appname; account.</string>
    <string name="delete_account_permenent">Delete your account permanently</string>
    <string name="change_your_password_header">Change your password</string>
    <string name="enter_old_password">Enter your current password</string>
    <string name="enter_new_password">Enter your new password</string>
    <string name="update_password">Update password</string>
    <string name="old_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm new password</string>
</resources>