<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:scrollbars="none"
    android:layout_width="wrap_content"
    >
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="135dp"
    android:background="@drawable/bg_popup"
    android:orientation="vertical"
    android:padding="6dp">


        <TextView
            android:id="@+id/message"
            android:drawablePadding="5dp"
            android:padding="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/message"
            android:textColor="@color/black"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="@dimen/text_size_13"
            tools:ignore="HardcodedText"
            app:drawableStartCompat="@drawable/ic_chat" />

        <TextView
            android:id="@+id/itinerary"
            android:drawablePadding="5dp"
            android:padding="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/itinerary"
            android:textColor="@color/black"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="@dimen/text_size_13"
            tools:ignore="HardcodedText"
            app:drawableStartCompat="@drawable/ic_task" />

        <TextView
            android:id="@+id/receipt"
            android:drawablePadding="5dp"
            android:padding="3dp"
            android:textSize="13sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/receipt"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:textAppearance="?android:attr/textAppearanceSmall"
            tools:ignore="HardcodedText"
            app:drawableStartCompat="@drawable/ic_itinerary" />

        <TextView
            android:id="@+id/cancel"
            android:drawablePadding="5dp"
            android:padding="3dp"
            android:textSize="@dimen/text_size_13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel_"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:textAppearance="?android:attr/textAppearanceSmall"
            tools:ignore="HardcodedText"
            app:drawableStartCompat="@drawable/ic_cancel" />
        <TextView
            android:id="@+id/approve"
            android:drawablePadding="5dp"
            android:padding="3dp"
            android:textSize="@dimen/text_size_13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/approve"
            android:layout_marginTop="10dp"
            android:visibility="gone"
            android:textColor="@color/black"
            android:textAppearance="?android:attr/textAppearanceSmall"
            tools:ignore="HardcodedText"
            app:drawableStartCompat="@drawable/ic_approve" />
        <TextView
            android:id="@+id/dicline"
            android:drawablePadding="5dp"
            android:padding="3dp"
            android:visibility="gone"
            android:textSize="@dimen/text_size_13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/decline"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:textAppearance="?android:attr/textAppearanceSmall"
            tools:ignore="HardcodedText"
            app:drawableStartCompat="@drawable/ic_decline" />

    </LinearLayout>
</ScrollView>