<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

  <data>
    <variable
        name="viewModel"
        type="com.airhomestays.app.ui.profile.setting.SettingViewModel" />
  </data>

  <RelativeLayout
      android:layout_width="match_parent"
      android:background="@color/white"
      android:layout_height="match_parent"
      android:layoutDirection="locale">


    <ImageView
        android:id="@+id/iv_close"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="24dp"
        android:padding="10dp"
        android:src="@drawable/ic_close" />

    <TextView
        android:id="@+id/tv_what_name"
        style="@style/AuthScreenTitle"
        android:layout_below="@id/iv_close"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/change_your_password_header"
        android:textDirection="locale" />

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:layout_below="@id/tv_what_name"
          android:paddingStart="24dp"
          android:paddingEnd="24dp"
          android:paddingBottom="24dp">

        <TextView
            style="@style/AuthScreenInputPlaceholder"
            android:layout_marginTop="10dp"
            android:text="@string/old_password"
            android:textDirection="locale" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_edit_text_login">

          <EditText
              style="@style/AuthScreenEditText"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@color/transparent"
              android:hint="@string/enter_old_password"
              android:paddingEnd="50dp"
              android:maxLength="25"
              android:imeOptions="actionDone|flagNoExtractUi"
              android:inputType="textPassword"
              android:text="@={viewModel.oldPassword}"
              app:toggle="@{viewModel.showOldPassword}"
              android:textAlignment="viewStart"
              android:textDirection="locale"
              tools:ignore="Autofill,LabelFor" />

          <ImageView
              android:id="@+id/iv_old_password_visibility"
              android:layout_width="50dp"
              android:layout_height="50dp"
              android:layout_alignParentEnd="true"
              android:padding="15dp"
              android:src="@drawable/ic_visibility_hide" />

        </RelativeLayout>

        <TextView
            style="@style/AuthScreenInputPlaceholder"
            android:layout_marginTop="10dp"
            android:text="@string/new_password"
            android:textDirection="locale" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_edit_text_login">

          <EditText
              style="@style/AuthScreenEditText"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@color/transparent"
              android:hint="@string/enter_new_password"
              android:paddingEnd="50dp"
              android:maxLength="25"
              android:imeOptions="actionDone|flagNoExtractUi"
              android:inputType="textPassword"
              android:text="@={viewModel.newPassword}"
              app:toggle="@{viewModel.showNewPassword}"
              android:textAlignment="viewStart"
              android:textDirection="locale"
              tools:ignore="Autofill,LabelFor" />

          <ImageView
              android:id="@+id/iv_new_password_visibility"
              android:layout_width="50dp"
              android:layout_height="50dp"
              android:layout_alignParentEnd="true"
              android:padding="15dp"
              android:src="@drawable/ic_visibility_hide" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tv_placeholder_password"
            style="@style/AuthScreenInputPlaceholder"
            android:layout_marginTop="10dp"
            android:text="@string/confirm_password"
            android:textDirection="locale" />

        <RelativeLayout
            android:id="@+id/container_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_edit_text_login">

          <EditText
              android:id="@+id/et_password"
              style="@style/AuthScreenEditText"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@color/transparent"
              android:hint="@string/confirm_password"
              android:paddingEnd="50dp"
              android:maxLength="25"
              android:imeOptions="actionDone|flagNoExtractUi"
              android:inputType="textPassword"
              android:text="@={viewModel.confirmPassword}"
              app:toggle="@{viewModel.showConfirmPassword}"
              android:textAlignment="viewStart"
              android:textDirection="locale"
              tools:ignore="Autofill,LabelFor" />

          <ImageView
              android:id="@+id/iv_confirm_password_visibility"
              android:layout_width="50dp"
              android:layout_height="50dp"
              android:layout_alignParentEnd="true"
              android:padding="15dp"
              android:src="@drawable/ic_visibility_hide" />

        </RelativeLayout>

      </LinearLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true"
        android:layout_margin="24dp"
        android:background="@drawable/curve_button_red"
        android:backgroundTint="@null"
        android:text="@string/update_password"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_h2"
        android:textStyle="bold"
        tools:targetApi="m" />

    <FrameLayout
        android:id="@+id/fl_auth_loading_bg"
        goneUnless="@{viewModel.isLoading}"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

      <com.airbnb.lottie.LottieAnimationView
          android:id="@+id/lt_loading"
          android:visibility="gone"
          android:layout_width="150dp"
          android:layout_height="150dp"
          android:layout_gravity="center_vertical|center_horizontal"
          android:background="@drawable/lottie_background"
          app:lottie_autoPlay="true"
          app:lottie_loop="true"
          app:lottie_rawRes="@raw/loading_qwe"
          />

    </FrameLayout>

  </RelativeLayout>

</layout>