<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>


    </data>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layoutDirection="locale">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/white">

            <include
                android:id="@+id/action_bar"
                layout="@layout/toolbar_profile"
                style="@style/Toolbar" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginStart="20dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/delete_account"
                    android:fontFamily="@font/linetocircular"
                    android:textColor="#454545"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/ic_deleted"
                    android:textSize="@dimen/text_size_h1_5"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/delete_account_caution"
                        android:fontFamily="@font/linetocircular"
                        android:textColor="#454545"
                        android:textStyle="bold"
                        android:layout_marginTop="15dp"
                        android:textSize="@dimen/text_size_h1"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/delete_account_first"
                        android:fontFamily="@font/linetocircular"
                        android:textColor="#454545"
                        android:layout_marginTop="15dp"
                        android:textSize="@dimen/text_size_h1"/>
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/delete_account_dsec"
                    android:fontFamily="@font/linetocircular"
                    android:textColor="#454545"
                    android:textSize="@dimen/text_size_h1"/>
                <RelativeLayout
                    android:id="@+id/permenent_ll"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/permenent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delete_account_permenent"
                    android:textColor="#F32B52"
                    android:layout_marginTop="15dp"
                    android:textSize="@dimen/text_size_h1"/>

                <ImageView
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:src="@drawable/ic_vector_right"
                    android:fontFamily="@font/linetocircular"
                    android:baselineAlignBottom="true"
                    android:layout_toEndOf="@id/permenent"
                    android:textColor="#F32B52"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="20dp"
                    android:textSize="@dimen/text_size_h1"/>
                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="1dp"
                        android:background="#F32B52"
                        android:layout_marginTop="2dp"
                        android:layout_below="@id/permenent"
                        android:layout_alignStart="@id/permenent"
                        android:layout_alignEnd="@id/permenent"/>
                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>