<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.airhomestays.app.ui.host.HostFinalViewModel" />
        <variable
            name="publishContent"
            type="Boolean"/>
        <variable
            name="publishTxt"
            type="Boolean"/>
        <variable
            name="preview"
            type="Boolean"/>
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layoutDirection="locale"
        android:background="@color/white"
        android:paddingTop="10dp">

        <include layout="@layout/include_toolbar_listing_sub_screen"
            android:id="@+id/toolbar"
            android:layout_marginStart="5dp"
            android:layout_height="50dp"
            android:layout_width="match_parent"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/toolbar"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:background="@color/white">

            <TextView
                android:id="@+id/tv_become_host"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/be_vietnampro_semibold"
                android:text="@string/become_host"
                android:textColor="@color/black"
                android:textDirection="locale"
                android:textSize="@dimen/text_size_medium" />

        <RelativeLayout
            android:id="@+id/rl_rv_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/rl_bottom_layout"
            android:layout_below="@id/tv_become_host"
            android:layout_marginTop="5dp">

            <com.airbnb.epoxy.EpoxyRecyclerView
                android:id="@+id/erv_intial_activity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="20dp">

            </com.airbnb.epoxy.EpoxyRecyclerView>
        </RelativeLayout>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/ll_404_page"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical"
            android:layout_below="@id/toolbar"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:padding="20dp"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/uh_oh"
                android:gravity="center"
                android:textSize="40sp"
                android:textStyle="bold"
                android:textColor="@color/text_color"
                android:layout_marginBottom="0dp"
                android:textDirection="locale"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/text_color"
                android:layout_marginTop="10dp"
                android:text="@string/we_can_t_seem_to_find_the_anything_that_you_re_looking_for"
                android:textDirection="locale"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/error_code_404"
                android:layout_marginTop="5dp"
                android:gravity="center_horizontal"
                android:textDirection="locale"/>

            <Button
                android:id="@+id/btn_explore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/explore_appname"
                android:minWidth="40dp"
                android:padding="20dp"
                android:visibility="gone"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:background="@drawable/curve_button_transparent"
                android:layout_marginTop="15dp"
                android:textAllCaps="false"/>

        </LinearLayout>

        <FrameLayout
            android:id="@+id/fl_auth_loading_bg"
            goneUnless="@{viewModel.isLoading}"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lt_loading"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:background="@drawable/lottie_background"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/loading_qwe"
               />

        </FrameLayout>

    </RelativeLayout>

</layout>
